# BURT-Balistic-Release

./: CMakeLists.txt  Doxyfile  README.md
cmake/: proficio-config.cmake  proficio-config.cmake.in
configurations/: CMakeLists.txt  LeftConfig.txt  RightConfig.txt  calibration.conf.left  calibration.conf.right  default.conf  gravitycal.conf.left  gravitycal.conf.right  user_gravity_compensation_grid.conf.left  user_gravity_compensation_grid.conf.right  wam3.conf.left  wam3.conf.right
include/proficio/: standard_proficio_main.h
include/proficio/systems/: haptics.h  utilities.h
include/proficio/systems/haptics/: cylindrical_assist.h  haptic_floor.h  haptic_line.h  haptic_sphere.h  shrinking_sphere.h
include/proficio/systems/haptics/abstract/: haptic_object.h
include/proficio/systems/utilities/: haptic_floor.h  joint_torque_saturation.h  joint_velocity_saturation.h  user_gravity_compensation.h  user_gravity_compensation_linear.h  virtual_joint_stops.h
include/proficio/tools/: configure_safety_module.h  forward_kinematics.h  generate_gravity_compensation_grid.h  linear_interpolate.h  natural_neighbor_interpolate.h
proficio_demos/: CMakeLists.txt
proficio_demos/ball_popping/: CMakeCache.txt  CMakeLists.txt  Makefile  ball_popping  ball_popping.cpp  ball_popping_visualization.py  cmake_install.cmake  network_haptics.h
proficio_demos/ball_popping/textures/: Ceiling.tga  HandIcon.tga  bg.tga  bg_alone.tga  shade.tga
proficio_demos/cube_sphere/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cube_sphere  cube_sphere.cpp  cube_sphere.h  cube_sphere_dragonfly.cpp  ex10_haptics_visualization.py  haptic_ball_proficio.h  haptic_box_proficio.h  haptic_line.h  input.txt  message_def.h  normalize.h  reading_test.cpp  vector_separator.h
proficio_demos/haptic_world/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  haptic_world_visualization.py
proficio_demos/haptic_world/src/: haptic_world.cpp  haptic_world.h
proficio_demos/haptic_world/textures/: barrett_logo.tga  corduroy.tga  magnet.tga
proficio_demos/test_prog/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cube_sphere_mod  cube_sphere_mod.cpp  cube_sphere_mod.h  ex10_haptics_visualization.py
programs/: CMakeLists.txt  homecheck.cpp  state_toggle.cpp
src/: CMakeLists.txt
src/systems/haptics/: cylindrical_assist.cpp  haptic_floor.cpp  haptic_sphere.cpp  shrinking_sphere.cpp
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tests/safety_systems/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  virtual_joint_stops_test  virtual_joint_stops_test.cpp
tests/user_gravity_compensation/: CMakeLists.txt  Makefile  cmake_install.cmake  generate_gravity_compensation_grid  generate_gravity_compensation_grid.cpp  gravity_compensation_test  gravity_compensation_test.cpp  linear_interpolation_test  linear_interpolation_test.cpp
